--- a/css/admin.css
+++ b/css/admin.css
@@ -1,4 +1,3 @@
-
 ul.eab-guest-list li {
     float: left;
     padding: 2px;
@@ -7,6 +6,7 @@ ul.eab-guest-list li {
 .misc-eab-section label {
     vertical-align: text-top;
 }
+
 .misc-eab-section label.eab-inline-label {
     width: auto;
 }
@@ -16,15 +16,14 @@ ul.eab-guest-list li {
     margin-top: 5px;
 }
 
-#eab-add-more-bank, #eab-add-more {
+#eab-add-more-bank,
+#eab-add-more {
     display: none;
 }
 
-.eab_meta_box {
-}
+.eab_meta_box {}
 
-.misc-eab-section {
-}
+.misc-eab-section {}
 
 .eab-section-heading {
     font-style: italic;
@@ -34,23 +33,23 @@ ul.eab-guest-list li {
     float: left;
 }
 
-#eab-add-more-button{
-	text-decoration: none;
-	font-size: 12px!important;
-	line-height: 13px;
-	padding: 5px 15px;
-	cursor: pointer;
-	border-width: 1px;
-	border-style: solid;
-	-khtml-border-radius: 11px;
-	border-radius: 11px;
-	font-weight: bold;
-	margin-top: 10px;
-	-khtml-box-sizing: content-box;
-	box-sizing: content-box;
-	background-color: #f6f6f6;
-	background-image: linear-gradient(top, rgb(246, 246, 246), rgb(240, 239, 239));
-	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,StartColorStr='#f6f6f6', EndColorStr='#f0efef');
+#eab-add-more-button {
+    text-decoration: none;
+    font-size: 12px!important;
+    line-height: 13px;
+    padding: 5px 15px;
+    cursor: pointer;
+    border-width: 1px;
+    border-style: solid;
+    -khtml-border-radius: 11px;
+    border-radius: 11px;
+    font-weight: bold;
+    margin-top: 10px;
+    -khtml-box-sizing: content-box;
+    box-sizing: content-box;
+    background-color: #f6f6f6;
+    background-image: linear-gradient(top, rgb(246, 246, 246), rgb(240, 239, 239));
+    filter: progid: DXImageTransform.Microsoft.gradient(GradientType=0, StartColorStr='#f6f6f6', EndColorStr='#f0efef');
 }
 
 #eab-add-more-rows {
@@ -65,16 +64,15 @@ ul.eab-guest-list li {
     background-image: url(../img/mid-greyscale.png);
 }
 
-#icon-edit.icon32-posts-incsub_event, #icon-post.icon32-posts-incsub_event {
+#icon-edit.icon32-posts-psource_event,
+#icon-post.icon32-posts-psource_event {
     background: url(../img/mid-greyscale.png) no-repeat;
 }
 
-
-
 a.eab-info {
     width: 30px;
-	height: 30px;
-	background: url(../img/information.png) 10px 12px no-repeat;
+    height: 30px;
+    background: url(../img/information.png) 10px 12px no-repeat;
     text-decoration: none;
     display: inline-block;
 }
@@ -109,8 +107,6 @@ fieldset.eab-settings-section legend {
     -webkit-border-radius: 3px;
 }
 
-
-
 .eab-expand-metabox {
     float: right;
     display: none;
@@ -121,7 +117,7 @@ div.postbox.closed .eab-expand-metabox {
     color: #21759B;
     text-decoration: underline;
     cursor: pointer;
-	font-size: 12px;
+    font-size: 12px;
 }
 
 div.eab-metaboxcol-two {
@@ -134,8 +130,8 @@ div.eab-metabox {
 }
 
 .eab-metabox h3.eab-hndle {
-	cursor: default;
-    border-bottom:1px solid #e5e5e5;
+    cursor: default;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 div.eab-minimetabox {
@@ -164,24 +160,25 @@ div.eab-inside {
 
 .eab-inside li {
     line-height: 30px;
-	border-bottom: 1px solid #DDD;
-	font-weight: bold;
-	text-shadow: -1px -1px 0px white;
+    border-bottom: 1px solid #DDD;
+    font-weight: bold;
+    text-shadow: -1px -1px 0px white;
 }
 
 a.eab-goto-step {
     float: right;
 }
 
-#incsub-event-wizard .inside, #incsub-event-wizard .handlediv {
+#psource-event-wizard .inside,
+#psource-event-wizard .handlediv {
     display: none;
 }
 
-#incsub-event-wizard .hndle {
+#psource-event-wizard .hndle {
     cursor: default !important;
 }
 
-#incsub-event-wizard .eab-expand-metabox {
+#psource-event-wizard .eab-expand-metabox {
     display: inline;
     font-size: 1em;
 }
@@ -192,17 +189,17 @@ input.error {
 }
 
 .eab-settings-settings_item {
-	overflow: hidden;
-	border-bottom:1px solid #dddddd;
-    padding:10px;
+    overflow: hidden;
+    border-bottom: 1px solid #dddddd;
+    padding: 10px;
 }
 
 .eab-inside .eab-settings-settings_item:last-child {
-    border-bottom:none;
+    border-bottom: none;
 }
 
 .eab-settings-settings_item:hover {
-	background-color: #f2f2f2;
+    background-color: #f2f2f2;
 }
 
 #eab-arf-new_additional_field-add {
@@ -214,44 +211,48 @@ input.error {
     display: inline-block;
     width: 25%;
     line-height: 20px;
-    margin-right:3%;
+    margin-right: 3%;
 }
 
-
-
-.eab-inside{
-	line-height: 40px;
+.eab-inside {
+    line-height: 40px;
 }
 
-.eab_meta_column_box{
-	border-bottom: 1px solid #DFDFDF;
-	padding: 10px 0px;
-	margin: 5px 0px;
-	font-weight: bold;
+.eab_meta_column_box {
+    border-bottom: 1px solid #DFDFDF;
+    padding: 10px 0px;
+    margin: 5px 0px;
+    font-weight: bold;
 }
 
-.top{margin: 0 0 5px 0;}
-
-.incsub_event_page_eab_settings #wpbody-content .metabox-holder
-.incsub_event_page_eab_welcome #wpbody-content .metabox-holder
-{
-	padding-top:0px;
+.top {
+    margin: 0 0 5px 0;
 }
 
-.incsub_event-fee_row{
-	clear:both;
-	margin-top:10px;
+.psource_event_page_eab_settings #wpbody-content .metabox-holder .psource_event_page_eab_welcome #wpbody-content .metabox-holder {
+    padding-top: 0px;
 }
 
-.eab-note{background-color: #ffffde;
-border: 1px solid #E6DB55;padding:0 10px;margin-bottom:10px;}
+.psource_event-fee_row {
+    clear: both;
+    margin-top: 10px;
+}
+
+.eab-note {
+    background-color: #ffffde;
+    border: 1px solid #E6DB55;
+    padding: 0 10px;
+    margin-bottom: 10px;
+}
 
 #eab_addons_hub {
     line-height: 1.6em;
 }
+
 #eab_addons_hub .filters {
     font-size: .9em;
 }
+
 #eab_addons_hub .filters a.selected {
     font-weight: bold;
     color: #333;
@@ -272,6 +273,7 @@ border: 1px solid #E6DB55;padding:0 10px;margin-bottom:10px;}
     float: left;
     width: 49%;
 }
+
 .eab-metaboxcol.columns-2 .eab-postbox_container-last {
     float: right;
 }
@@ -280,11 +282,11 @@ border: 1px solid #E6DB55;padding:0 10px;margin-bottom:10px;}
     color: #BC0B0B;
 }
 
-
 .tabbed #eab-root-settings_nav {
     width: 19%;
     float: left;
 }
+
 .tabbed #eab-root-settings_nav h3 {
     border: 1px solid #eee;
     background: transparent;
@@ -292,15 +294,18 @@ border: 1px solid #E6DB55;padding:0 10px;margin-bottom:10px;}
     font-size: 1.1em;
     padding: 3px;
 }
+
 .tabbed #eab-root-settings_nav h3.active {
     background: #2ea2cc;
     border: 1px solid #2ea2cc;
     color: white;
 }
+
 .tabbed .eab-metabox.postbox {
     width: 80%;
     float: right;
 }
+
 .tabbed .submit {
     text-align: right;
     clear: right;
@@ -309,40 +314,51 @@ border: 1px solid #E6DB55;padding:0 10px;margin-bottom:10px;}
 .eab-loading-cover {
     display: none;
 }
+
 .eab-loading-cover.tabbable {
     display: block;
     position: absolute;
-    top: 0; bottom: 0; left: -20px; right: 0;
+    top: 0;
+    bottom: 0;
+    left: -20px;
+    right: 0;
     background-color: #eee;
 }
+
 .eab-loading-cover.tabbable h1 {
     position: relative;
     top: 30%;
     text-align: center;
-    margin: 0; padding: 0;
+    margin: 0;
+    padding: 0;
     color: #ddd;
 }
+
 .wrap.tabbable.hide {
     display: none;
 }
 
+
 /**
  * Add User form bit
  */
+
 .eab-add_attendance {
     border: 1px solid rgb(238, 238, 238);
     padding: 5px;
     margin: 5px 0;
 }
+
 .eab-add_attendance legend {
     padding: 0 5px;
 }
+
 .eab-add_attendance label {
     margin-left: 5px;
 }
+
 .eab-add_attendance .eab-attendance-email,
-.eab-add_attendance .eab-attendance-status
-{
+.eab-add_attendance .eab-attendance-status {
     margin-right: 15px;
 }
 
@@ -350,38 +366,48 @@ border: 1px solid #E6DB55;padding:0 10px;margin-bottom:10px;}
 /**
  * Pointer tutorial fixes...
  */
+
 .eab_tutorial-pointer .dismiss {
     margin: 0 .7em;
 }
+
 .eab_tutorial-pointer .wp-pointer-buttons {
     text-align: center;
 }
+
 .eab_tutorial-pointer .wp-pointer-buttons a {
     float: none;
     line-height: 2em;
 }
 
-input.incsub_event_date, input.incsub_event_time{
-	font-size: 10px;
-	padding: 3px;
+input.psource_event_date,
+input.psource_event_time {
+    font-size: 10px;
+    padding: 3px;
 }
 
-.eab-start-section{
-	margin-top: 5px;
-	margin-bottom: 5px;
+.eab-start-section {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
+
 
 /**
 * Event Editor Sidebar Date and Time Design Fix
 **/
-label[for^="incsub_event_start_"], label[for^="incsub_event_end_"] {
+
+label[for^="psource_event_start_"],
+label[for^="psource_event_end_"] {
     display: block;
     margin-top: 10px;
 }
-label[for^="incsub_event_start_"] span, label[for^="incsub_event_end_"] span {
+
+label[for^="psource_event_start_"] span,
+label[for^="psource_event_end_"] span {
     font-weight: bold;
     display: block;
 }
+
 .eab-section-block {
     border-top: 1px solid #d7d7d7;
     margin: 10px 0;
