--- a/css/front.css
+++ b/css/front.css
@@ -96,7 +96,7 @@
 }
 
 #psourceevents-wrapper h2 {
-    float: left;
+    /*float: left;*/
     font-size: 1.9em;
     margin: 10px 0;
     padding: 0;
