--- a/css/eab-events-fpe.css
+++ b/css/eab-events-fpe.css
@@ -15,6 +15,7 @@
     padding: .4%;
     border: 1px solid #ddd;
     margin: 5px;
+    display: inline-block;
 }
 
 #eab-events-fpe-status_type {
@@ -35,7 +36,7 @@
 /* ----- General meta box elements ----- */
 
 .eab-events-fpe-meta_box_item {
-    float: left;
+    display: inline-block;
     padding: 5px;
 }
 
