--- a/css/admin.css
+++ b/css/admin.css
@@ -147,7 +147,7 @@ div.eab-inside {
 }
 
 .eab-dev-logo a {
-    background: url(../img/wpmudev-logo.png) no-repeat scroll 0 0 transparent;
+    background: url(../img/psource-logo.png) no-repeat scroll 0 0 transparent;
     color: #2C2D2D;
     display: block;
     float: right;
