--- a/css/weekly-event-calendar.css
+++ b/css/weekly-event-calendar.css
@@ -44,6 +44,17 @@ a.psourceevents-calendar-event {
     border-radius: 5px;
 }
 
+a.psourceevents-calendar-event.open {
+    display: block;
+    margin: .2em;
+    padding: .1em .4em;
+    background: #75AB24;
+    color: #fff;
+    text-decoration: none;
+    border: 1px solid #558B04;
+    border-radius: 5px;
+}
+
 a.psourceevents-calendar-event:hover {
     background: #659B14;
     text-decoration: none;
@@ -62,8 +73,6 @@ a.psourceevents-calendar-event:hover {
     z-index: 999;
 }
 
-
-}
 .psourceevents-weekly-calendar-hours-mins {
     font-weight: bold;
     font-size: 0.8em;
