--- a/css/ui-lightness/jquery-ui-1.8.16.custom.css
+++ b/css/ui-lightness/jquery-ui-1.8.16.custom.css
@@ -1171,7 +1171,8 @@
 
 .ui-datepicker select.ui-datepicker-month,
 .ui-datepicker select.ui-datepicker-year {
-    width: 49%;
+    width: 40%;
+    max-height: 30px;
 }
 
 .ui-datepicker table {
