Fix: Update version to 1.4.5 and enhance media upload functionality

--- a/docs/_layouts/psource-theme.html
+++ b/docs/_layouts/psource-theme.html
@@ -31,7 +31,7 @@
 
         <section class="widget">
           <h3>📰 Neuigkeiten</h3>
-          <p>Letztes Update: 9. Mai 2025 Version 1.4.4</p>
+          <p>Letztes Update: 10. August 2025 Version 1.4.5</p>
         </section>
 
         <section class="widget">
